--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="highlight highlight-source-shell"><pre>brew tap athena-oss/tap
 brew install athena
-<span class="pl-c"># OR</span>
+<span class="pl-c"># Or</span>
 git clone https://github.com/athena-oss/athena.git</pre></div>
 
 <p><a href="https://github.com/athena-oss/athena">More info</a></p>
@@ -49,13 +49,13 @@ git clone https://github.com/athena-oss/athena.git</pre></div>
 <h4>
 <a id="example" class="anchor" href="#example" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example</h4>
 
-<p>Start SonarQube Server</p>
+<p>Starting SonarQube Server</p>
 
 <div class="highlight highlight-source-shell"><pre>./athena sonarqube server start</pre></div>
 
-<p>Quick scan</p>
+<p>Running a scan</p>
 
-<div class="highlight highlight-source-shell"><pre>./athena sonarqube scanner <span class="pl-k">~</span>/myproject/root/dir</pre></div>
+<div class="highlight highlight-source-shell"><pre>./athena sonarqube scanner <span class="pl-k">~</span>/myproject/</pre></div>
 
 <p>Using SonarQube Scanner options to only analyze certain files and directories</p>
 
@@ -65,14 +65,15 @@ git clone https://github.com/athena-oss/athena.git</pre></div>
 <p>Using a different SonarQube Server</p>
 
 <div class="highlight highlight-source-shell"><pre>./athena sonarqube scanner /home/example/myotherproject/ \
-           -Dsonar.host.url=http://othersonarserver:9000</pre></div>
+           -Dsonar.host.url=http://othersonarserver:9000
+           -Dsonar.sources=vendor/mylib/, pubic/example.php</pre></div>
 
 <p>Creating a <a href="sonar-project.properties">sonar-project.properties</a> file inside your project's root directory</p>
 
-<div class="highlight highlight-source-shell"><pre>curl -o /home/example/myproject/ \
+<div class="highlight highlight-source-shell"><pre>curl -o /home/example/someproject/sonar-project.properties \
   https://raw.githubusercontent.com/luisgros-fixeads/plugin-sonarqube/master/sonar-project.properties
 
-./athena sonarqube scanner /home/example/myproject/</pre></div>
+./athena sonarqube scanner /home/example/someproject/</pre></div>
 
 <h4>
 <a id="resources" class="anchor" href="#resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Resources</h4>
