Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ reports might take a little bit of time to display depending on the project size
            -Dsonar.sources=vendor/mylib/, public/example.php</pre></div>
 
 <h4>
-<a id="instead-of-passing-scanner-options-creating-a-sonar-projectproperties-file-inside-your-projects-root-directory" class="anchor" href="#instead-of-passing-scanner-options-creating-a-sonar-projectproperties-file-inside-your-projects-root-directory" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Instead of passing scanner options, creating a <a href="sonar-project.properties">sonar-project.properties</a> file inside your project's root directory</h4>
+<a id="instead-of-passing-scanner-options-creating-a-sonar-projectproperties-file-inside-your-projects-root-directory" class="anchor" href="#instead-of-passing-scanner-options-creating-a-sonar-projectproperties-file-inside-your-projects-root-directory" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Instead of passing scanner options, creating a <a href="https://raw.githubusercontent.com/luisgros-fixeads/plugin-sonarqube/master/sonar-project.properties">sonar-project.properties</a> file inside your project's root directory</h4>
 
 <div class="highlight highlight-source-shell"><pre><span class="pl-c"># Use basic example file provided by this plugin as a skeleton</span>
 curl -o /home/example/someproject/sonar-project.properties \
