Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,25 +55,18 @@ pre-installed to get you started quickly.</p>
 <ul>
 <li><a href="#using-sonarqube-scanner-options-to-only-analyze-certain-files-and-directories">Using SonarQube Scanner CLI options</a></li>
 <li><a href="#using-a-different-sonarqube-server">Using a different SonarQube Server</a></li>
-<li><a href="#instead-of-passing-scanner-options-creating-a-sonar-project-properties-file-inside-your-projects-root-directory">Using a sonar-project.properties file</a></li>
 <li><a href="#installing-and-removing-sonarqube-plugins">Installing, removing and listing SonarQube Plugins</a></li>
 </ul>
 </li>
-<li>
-<a href="#plugins">Plugins</a>
-
-<ul>
-<li><a href="#using-sonarqube-scanner-options-to-only-analyze-certain-files-and-directories">Bundled plugins</a></li>
-</ul>
-</li>
+<li><a href="#plugins">Plugins</a></li>
 <li><a href="#resources">Resources</a></li>
 </ul>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
-<h5>
-<a id="install-athena" class="anchor" href="#install-athena" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install Athena</h5>
+<h4>
+<a id="install-athena" class="anchor" href="#install-athena" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install Athena</h4>
 
 <div class="highlight highlight-source-shell"><pre>brew tap athena-oss/tap
 brew install athena
